--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Dev Kibe Blog
+title:              Dev Kibe's Blog
 email:              labanrotich6544@gmail.com
 description:        A blog sharing insights on software development
 author:             Laban Kibet
