--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ linkedin_username:  laban-rotich
 
 # Build settings
 markdown:           kramdown
+kramdown:
+    syntax_highlighter: rouge
 paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
