--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,10 @@ linkedin_username:  laban-rotich
 
 # Build settings
 # markdown:           kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+markdown: redcarpet
+highlighter: pygments
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
 paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
