customize code block

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,6 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+
+head:
+  - <link rel="stylesheet" href="/assets/css/beautifuljekyll.css">
