--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Dev Kibe's Blog
+title:              Kibe's Blog
 email:              labanrotich6544@gmail.com
 description:        A blog sharing insights on software development
 author:             Laban Kibet
@@ -21,4 +21,6 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-spaceship
+
 
