--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Kibe's Blog
 email:              labanrotich6544@gmail.com
-description:        A blog sharing insights on software development
+title: Welcome to My Tech Hub
+description: Join me on a journey through the world of software development, innovative solutions, and technology trends.
 author:             Laban Kibet
 baseurl:            "" 
 url:                "https://laban254.github.io"
