--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 email:              labanrotich6544@gmail.com
-title: Welcome to My Tech Hub
+title: Kibe's Blog 
 description: Join me on a journey through the world of software development, innovative solutions, and technology trends.
 author:             Laban Kibet
 baseurl:            "" 
