Refactor blog layout and styling for better readability

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 email:              labanrotich6544@gmail.com
-title: Kibe's Blog 
-description: Join me on a journey through the world of software development, innovative solutions, and technology trends.
+title: Exploring Software Development
+description: A journey through code 🖥️, tech trends 🚀 and ideas 💡
 author:             Laban Kibet
 baseurl:            "" 
 url:                "https://laban254.github.io"
